feat(java-agent): phase 5b.2 — ByteBuddy + SSLEngineInst end-to-end
A real JDK HttpsServer driven by curl is now captured end-to-end
through ByteBuddy-inlined advice on sun.security.ssl.SSLEngineImpl's
wrap/unwrap methods. 1000 parallel HTTPS requests → 1000/1000 REQ +
RESP parsed in apidump-javatls, zero ringbuf drops, JVM stable.

Exit criteria (per phase-5-plan.md §5b.2)
----------------------------------------
  1. ✅ gradle shadowJar produces a single agent JAR (4.7 MB; bigger
     than the original 1.5 MB target because we kept full ByteBuddy
     bundled — strip-down deferred to 5c if it actually matters).
  2. ✅ HelloHttps workload + agent + curl → REQ + RESP per HTTPS
     transaction.
  3. ✅ 1000 parallel requests: no crashes, RSS bounded (145 MB →
     259 MB, mostly JIT + ByteBuddy class data).
  4. ✅ JDK 17 only (8/11/21 deferred to 5c).

Agent attach overhead: 178 ms (target ≤ 500 ms — 1/3 of budget).

The three subtle bugs that ate the session
------------------------------------------
1. SSLEngineImpl only declares the 4-arg wrap/unwrap variants — the
   2-arg convenience methods are concrete on the abstract SSLEngine
   class and delegate. Initial matcher targeted the 2-arg form and
   silently matched nothing. ByteBuddy's TRANSFORM log line means the
   class was visited, NOT that any advice was applied.

2. Cross-loader unreachability. Advice bytecode inlined into
   sun.security.ssl.SSLEngineImpl (module java.base, bootstrap loader)
   can't see helper classes in the app loader. Without a bootstrap-
   classpath append, every advice call would NoClassDefFoundError —
   silently, because of suppress=Throwable on the advice.

3. Can't append the whole agent JAR. Doing so puts ByteBuddy on both
   bootstrap AND app loaders, which causes loader-constraint
   LinkageError when Agent (app-loaded) calls ByteBuddy methods whose
   signatures reference bootstrap-resolved types. Fix: split into a
   tiny bootstrap JAR (~19 KB) with only IoctlPacket, NativeM